--- a/Web.css
+++ b/Web.css
@@ -39,7 +39,7 @@ span {
 }
 
 #nhan {
-    background-image: url("https://scontent-xsp1-3.xx.fbcdn.net/v/t39.30808-6/218325715_965654857553387_7752412335105348165_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=2xU5O1KiMiwAX8jlZs1&tn=6ocPK-CExaT5932I&_nc_ht=scontent-xsp1-3.xx&oh=00_AT9PseVas1v6HGEjhcOoen9aewxWcdrSzuChYZcATtSq1A&oe=61CF9E6E");
+    background-image: url("https://scontent.fdad3-3.fna.fbcdn.net/v/t39.30808-6/218325715_965654857553387_7752412335105348165_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=s9V64G5g0CMAX8OsqNK&tn=6ocPK-CExaT5932I&_nc_ht=scontent.fdad3-3.fna&oh=00_AT8ILQznBes9Se8Josf3So2LhOiauIq8mCN67hrfMqe14g&oe=61EB4DEE");
 }
 
 #call {
